[gd_scene load_steps=4 format=3 uid="uid://4u3y0vtj4jr7"]

[ext_resource type="Script" path="res://src/Narrator/dialog_player.gd" id="1_qrgme"]
[ext_resource type="Texture2D" uid="uid://bwfesmkl1lf5" path="res://assets/textbox.png" id="2_7avst"]

[sub_resource type="LabelSettings" id="LabelSettings_nbf2o"]
font_size = 20
font_color = Color(0, 0, 0, 1)

[node name="DialogPlayer" type="CanvasLayer"]
script = ExtResource("1_qrgme")
dialogue_file = "res://src/Narrator/Dialogue.json"
interjection_file = "res://src/Narrator/interjections.json"

[node name="Background" type="TextureRect" parent="."]
offset_left = 5.0
offset_top = 9.0
offset_right = 1150.0
offset_bottom = 122.0
texture = ExtResource("2_7avst")
expand_mode = 1

[node name="DialogueTimer" type="Timer" parent="."]
wait_time = 0.75

[node name="TextLabel" type="Label" parent="."]
offset_left = 24.0
offset_top = 19.0
offset_right = 1126.0
offset_bottom = 111.0
label_settings = SubResource("LabelSettings_nbf2o")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[connection signal="timeout" from="DialogueTimer" to="." method="_on_dialogue_timer_timeout"]
